# keen-probe-latinoamerica

./: .gitignore  .gitmodules  README.md  evaluate_probe.py  hyperparams.py  inference.py  main.py  mlp_regressor.py  probe.ipynb  pyproject.toml  results.csv  run_all_countries.sh  run_all_evaluations.sh  utils.py
data/: filter_vectors.ipynb  score_by_entity.json
models/: mlp_regressor_state_dict.pth
probes/: keen_probe_latam_lr_0.01_epoch_100_en_argentina_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_chile_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_colombia_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_costa_rica_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_cuba_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_ecuador_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_el_salvador_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_guatemala_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_honduras_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_latam_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_mexico_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_nicaragua_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_panama_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_paraguay_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_peru_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_republica_dominicana_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_usa_model.pkl  keen_probe_latam_lr_0.01_epoch_100_en_venezuela_model.pkl  keen_probe_latam_lr_0.01_epoch_100_es_argentina_model.pkl  (+37 more)
